k8s/tweet-writer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tweet-writer
  name: tweet-writer
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tweet-writer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tweet-writer
    spec:
      containers:
      - image: vanfarock/tweet_writer:v1.0.0
        imagePullPolicy: IfNotPresent
        name: tweet-writer-82dtx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
