k8s/tweet-writer/service.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tweet-writer
  name: tweet-writer
spec:
  selector:
    app: tweet-writer
  ports:
  - port: 8080
